Fixed SimpleModal bugs. Removed blockUI. Implemented custom waiting message specific to queries. Aligned arrows in lists (Windows). IE8+ support only.

--- a/trunk/pat-ui/css/saiku/src/styles.css
+++ b/trunk/pat-ui/css/saiku/src/styles.css
@@ -271,7 +271,7 @@ html, body {
 .dtree li,
 .mtree li {
     cursor: pointer;
-    line-height: 20px;
+    line-height: 19px;
     list-style-type: none;
     margin: 0;
     padding-left: 20px;
@@ -338,45 +338,51 @@ html, body {
 .workspace_inner {
     margin-left: 265px;
     padding: 10px;
-    overflow: auto;
+    /*overflow: auto;*/
 }
 
 /** Field List */
 
+.fields {
+    overflow: hidden;
+}
 .field_list {
     margin-bottom: 10px;
+    margin-left: -100px;
+    float: right;
+    width: 100%;
+    border-bottom: 1px solid #CCC;
+    border-right: 1px solid #CCC;
+    border-top: 1px solid #CCC;
+    -moz-border-radius: 0 3px 3px 0;
+    -webkit-border-radius: 0 3px 3px 0;
+    -moz-box-shadow: 0 0 2px #DDDDDD;
+    -webkit-box-shadow: 0 0 2px #DDDDDD;
 }
-.field_list .field_list_header {
+.field_list_header {
     background: #F9F9F9;
     border: 1px solid #CCC;
     background: -webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(#F0F0F0));
     background: -moz-linear-gradient(top, #FFFFFF 0%, #F0F0F0 100%);
     font-weight: bold;
     float: left;
-    padding: 5px;
+    padding: 4px 5px;
     line-height: 19px;
     text-shadow: 1px 1px 0 #FFFFFF;
-    width: 10%;
+    width: 80px;
     -moz-border-radius: 3px 0 0 3px;
     -webkit-border-radius: 3px 0 0 3px;
     -moz-box-shadow: 0 0 2px #DDDDDD;
     -webkit-box-shadow: 0 0 2px #DDDDDD;
 }
 .field_list .field_list_body {
-    border-bottom: 1px solid #CCC;
-    border-right: 1px solid #CCC;
-    border-top: 1px solid #CCC;
     float: left;
     margin: 0;
-    width: 88%;
-    -moz-border-radius: 0 3px 3px 0;
-    -webkit-border-radius: 0 3px 3px 0;
-    -moz-box-shadow: 0 0 2px #DDDDDD;
-    -webkit-box-shadow: 0 0 2px #DDDDDD;
+    margin-left: 100px;
 }
 .field_list .field_list_body ul {
-    height: 29px;
-    line-height: 29px;
+    height: 27px;
+    line-height: 27px;
     margin: 0;
     padding-left: 10px;
     float: left;
@@ -528,27 +534,6 @@ html, body {
     border-right: 1px solid #CCC;
 }
 
-/** Waiting */
-
-.waiting {
-    background: #FFF;
-    border: 3px solid #EEE;
-    display: inline-block;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    -moz-box-shadow: 0 0 3px #DDD;
-    -webkit-box-shadow: 0 0 3px #DDD;
-}
-.waiting .waiting_inner {
-    border: 1px solid #CCC;
-    -moz-border-radius: 1px;
-    -webkit-border-radius: 1px;
-}
-.waiting .waiting_inner .waiting_body {
-    background: url('../../../images/src/waiting_loading.gif') 10px 11px no-repeat;
-    padding: 10px 15px 10px 35px;
-}
-
 /** Dialog */
 
 .dialog {
@@ -636,6 +621,7 @@ a.button {
     color: #222;
     padding: 5px 10px;
     text-decoration: none;
+    text-shadow: 1px 1px 0 #FFFFFF;
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
     -moz-box-shadow: 0 0 2px #DDDDDD;
@@ -663,11 +649,19 @@ a.button_selected {
 
 .workspace_toolbar {
     margin-bottom: 15px;
-    text-align: left;
+    margin-top: 5px;
+    float: left;
 }
 
 /** Workspace Area */
 
 .workspace_area {
     overflow: auto;
+}
+
+/** Waiting */
+.waiting {
+    background: transparent url('../../../images/src/waiting.gif') no-repeat left center;
+    padding-left: 20px;
+    float: right;
 }
